--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -13,11 +13,11 @@
       <a href="#" class="item">{{theClass}}</a>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-clock"></i>
-        Start:  {{periodStartString}} (<span countdown='' date={{periodStartDateTimeString}}> &nbsp;</span> since start)
+        Start:  {{periodStartString}} (<counttimer date={{periodStartDateTimeString}}> &nbsp;</counttimer> since start)
       </a>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-clock"></i>
-        End:  {{periodEndString}} (<span countdown='' date={{periodEndDateTimeString}}> &nbsp;</span>  remains)
+        End:  {{periodEndString}} (<counttimer date={{periodEndDateTimeString}}> &nbsp;</counttimer>  remains)
       </a>
     </div>
 
