clean up data; fixed bug in time padding code

--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -7,7 +7,7 @@
       <a href="#" class="item"><the-current-time></the-current-time></a>
     </div>
 
-    <div class="list card">
+    <div class="list card" ng-hide="notSchoolHours">
       <div class="item item-divider">Now</div>
       <a href="#" class="item">{{thePeriod}}</a>
       <a href="#" class="item">{{theClass}}</a>
