restyling display.html and the menu

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,9 +1,4 @@
 /* Empty. Add your own CSS if you like */
-.cardTitleCenter {
-  text-align: center;
-}
+.havaNowCard {
 
-the-current-time {
-    text-align: center;
-    width:100%;
 }
