--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -1,54 +1,53 @@
 <ion-view view-title="HavaSchedule">
   <ion-content>
-    <div class="list card">
-      <div class="item item-divider">Today</div>
+    <div class="list card nowcard">
+      <div class="item item-divider dark">Now</div>
       <a href="#" class="item">{{theDate}}</a>
       <a href="#" class="item">{{theWeekday}}</a>
       <a href="#" class="item"><the-current-time></the-current-time></a>
       <a href="#" class="item" ng-hide="debug"></a>
     </div>
 
-    <div class="list card" ng-hide="hidePassingTimeDiv">
-      <div class="item item-divider">Passing Time</div>
-      <a href="#" class="item">{{thePeriod}}</a>
-      <a href="#" class="item">{{theClass}}</a>
+    <div class="list card" ng-show="passingTimeDiv">
+      <div class="item item-divider">Current Status:  Passing Time</div>
+      <a href="#" class="item">Next period:  {{thePeriod}}</a>
+      <a href="#" class="item">Next class:  {{theClass}}</a>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-clock"></i>
-        Next class starts in <counttimer date={{periodStartDateTimeString}}> &nbsp;</counttimer>
+        {{theClass}} starts in <counttimer date={{periodStartDateTimeString}}> &nbsp;</counttimer>
       </a>
     </div>
 
-    <div class="list card" ng-hide="hideInClassDIV">
+    <div class="list card schedulecard" ng-show="inClassDiv">
       <div class="item item-divider">{{thePeriod}}</div>
-      <a href="#" class="item">{{thePeriod}}</a>
       <a href="#" class="item">{{theClass}}</a>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-clock"></i>
-        Start:  {{periodStartString}} (<counttimer date={{periodStartDateTimeString}}> &nbsp;</counttimer> since start)
+        Started <counttimer date={{periodStartDateTimeString}}> &nbsp;</counttimer> ago (at {{periodStartString}})
       </a>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-clock"></i>
-        End:  {{periodEndString}} (<counttimer date={{periodEndDateTimeString}}> &nbsp;</counttimer>  remains)
+        Ends in <counttimer date={{periodEndDateTimeString}}> &nbsp;</counttimer> (at {{periodEndString}})
       </a>
     </div>
 
     <div class="list card">
-      <div class="item item-divider">
+      <div class="item item-divider dark">
         Timers
       </div>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-android-alarm-clock"></i>
         Every 10 minutes
       </a>
-      <a href="#" class="item item-icon-left">
+      <a href="#" class="item item-icon-left" ng-show="classTimers">
         <i class="icon ion-android-alarm-clock"></i>
         10 before end
       </a>
-      <a href="#" class="item item-icon-left">
+      <a href="#" class="item item-icon-left" ng-show="classTimers">
         <i class="icon ion-android-alarm-clock"></i>
         5 before end
       </a>
-      <a href="#" class="item item-icon-left">
+      <a href="#" class="item item-icon-left" ng-show="classTimers">
         <i class="icon ion-android-alarm-clock"></i>
         1 before end
       </a>
