debug toggle complete

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -29,7 +29,7 @@
         <ion-item menu-close href="#">
           Prefs (to come)
         </ion-item>
-        <ion-item menu-close href="debug()">
+        <ion-item menu-close ng-show="devModeEnabled" ng-click="debug()">
           Toggle Debug
         </ion-item>
 
