style corrections on passingdiv

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-.nowcard, .schedulecard {
+.nowcard, .schedulecard, .passingcard {
   .item-divider {
     text-align: left;
     font-weight: bolder;
