--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -8,7 +8,7 @@
       <a href="#" class="item" ng-hide="debug"></a>
     </div>
 
-    <div class="list card" ng-show="passingTimeDiv">
+    <div class="list card passingcard" ng-show="passingTimeDiv">
       <div class="item item-divider">Current Status:  Passing Time</div>
       <a href="#" class="item">Next period:  {{thePeriod}}</a>
       <a href="#" class="item">Next class:  {{theClass}}</a>
