choose bellschedule complete

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -20,8 +20,8 @@
         <ion-item menu-close href="#/app/display">
           Main View
         </ion-item>
-        <ion-item menu-close href="#">
-          Edit BellSchedule (to come)
+        <ion-item menu-close ng-click="showBell()">
+          Choose BellSchedule
         </ion-item>
         <ion-item menu-close href="#">
           Edit Roster (to come)
