--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="list card schedulecard" ng-show="inClassDiv">
-      <div class="item item-divider">{{thePeriod}}</div>
-      <a href="#" class="item">{{theClass}}</a>
+      <div class="item item-divider">{{chosenBellScheduleName}} Bell Schedule</div>
+      <a href="#" class="item"><span class="minorstandout">{{thePeriod}}</span>  <span class="standout">{{theClass}}</span></a>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-clock"></i>
         Started <counttimer date={{periodStartDateTimeString}}> &nbsp;</counttimer> ago (at {{periodStartString}})
