--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,3 +19,12 @@
     text-align: left;
   }
 }
+
+.minorstandout {
+  font-weight: bold;
+}
+
+.standout {
+  font-weight: bolder;
+  font-style: italic;
+}
