--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9746,3 +9746,10 @@ a.button {
 
 .nowcard .item-divider {
   text-align: left; }
+
+.minorstandout {
+  font-weight: bold; }
+
+.standout {
+  font-weight: bolder;
+  font-style: italic; }
