datepicker added and closed

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-.nowcard, .schedulecard, .passingcard {
+.nowcard, .schedulecard, .passingcard, .timercard {
   .item-divider {
     text-align: left;
     font-weight: bolder;
