--- a/www/templates/debug.html
+++ b/www/templates/debug.html
@@ -10,9 +10,8 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Enter Time and Date</span>
-          <input type="text" ng-model="debugData.timeData">
+          <input type="time" ng-model="debugData.timeData">
         </label>
-        <label class="item">Use format:  yyyy-mm-dd-hh-mm-ss</label>
         <label class="item item-input">
           <span class="input-label">Enable Debug</span><br>
           <ion-checkbox ng-checked="debugData.debugEnabled" ng-model="debugData.debugEnabled">
