--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -37,7 +37,7 @@
       <ion-list>
         <ion-item ng-class="item-icon-left" ng-if="shouldShow(timer)" class="item-remove-animate" ng-repeat="timer in timers" item="timer" ng-click="activate(timer)">
                 <i class="icon ion-android-alarm-clock">  {{timer.description}}  </i>
-                <timer-display ng-model="timer" ng-if="timer.active"></timer-display>
+                <timer-display ng-if="timer.active"></timer-display>
                 <ion-option-button class="button-assertive" ng-click="edit(timer)">Edit</ion-option-button>
         </ion-item>
       </ion-list>
