notifications nearly complete; restyled date-time display

--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -2,8 +2,7 @@
   <ion-content>
     <div class="list card nowcard">
       <div class="item item-divider dark" ng-click="updateUI()">Now  <span ng-class="{'debug': debug}" ng-show="debug">DEBUG MODE</span></div>
-      <a href="#" class="item">{{theDate}}</a>
-      <a href="#" class="item">{{theWeekday}}</a>
+      <a href="#" class="item">{{theWeekday}}, {{theDate}}</a>
       <a href="#" class="item"><the-current-time></the-current-time></a>
     </div>
 
