fixed roster names and added roster detail

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -10,19 +10,19 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-  <!-- bellschedules Tab -->
+  <!-- Roster Tab -->
   <ion-tab title="Roster" icon-off="ion-ios-pint-outline" icon-on="ion-ios-pint" href="#/tab/roster">
     <ion-nav-view name="tab-roster"></ion-nav-view>
   </ion-tab>
 
 
-    <!-- rosters Tab -->
+    <!-- BellSchedules Tab -->
     <ion-tab title="BellSchedules" icon-off="ion-android-notifications-none" icon-on="ion-android-notifications" href="#/tab/bells">
       <ion-nav-view name="tab-bells"></ion-nav-view>
     </ion-tab>
 
 
-  <!-- Account Tab -->
+  <!-- Prefs Tab -->
   <ion-tab title="Prefs" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/prefs">
     <ion-nav-view name="tab-prefs"></ion-nav-view>
   </ion-tab>
