basic tabs completed

--- a/www/templates/tab-prefs.html
+++ b/www/templates/tab-prefs.html
@@ -1,4 +1,4 @@
-<ion-view view-title="tab-prefs">
+<ion-view view-title="HavaSchedule">
     <ion-content>
       <div class="list card timercard">
         <div class="item item-divider">
