--- a/www/templates/display.html
+++ b/www/templates/display.html
@@ -1,9 +1,9 @@
 <ion-view view-title="HavaSchedule">
   <ion-content>
     <div class="list card nowcard">
-      <div class="item item-divider dark" ng-click="updateUI()">Now  <span ng-class="{'debug': debug}" ng-show="debug">DEBUG MODE</span></div>
-      <a href="#" class="item">{{theWeekday}}, {{theDate}}</a>
+      <div class="item item-divider dark" ng-click="updateUI()">{{theWeekday}}, {{theDate}}</div>
       <a href="#" class="item"><the-current-time></the-current-time></a>
+      <div class="item" ng-show="debug">  <span ng-class="{'debug': debug}" DEBUG MODE</span></div>
     </div>
 
     <div class="list card passingcard" ng-show="passingTimeDiv">
