--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,6 +3,7 @@
     <div class="list card nowcard">
       <div class="item item-divider dark" ng-click="updateUI()">{{theWeekday}}, {{theDate}}</div>
       <a href="#" class="item"><the-current-time></the-current-time></a>
+      <div ng-click="showBell()" ng-show="inClassDiv" class="item">{{chosenBellScheduleName}} Bell Schedule</div>
       <a href="#" class="item" ng-click="toggleDebug()" ng-show="debug">  <span ng-class="{'debug': debug}"> DEBUG MODE</span></a>
     </div>
 
@@ -16,8 +17,7 @@
     </div>
 
     <div class="list card schedulecard" ng-show="inClassDiv">
-      <div ng-click="showBell()" class="item item-divider">{{chosenBellScheduleName}} Bell Schedule</div>
-      <a href="#" class="item"><span class="minorstandout">{{thePeriod}}</span>:  <span class="standout">{{theClass}}</span><span ng-show="roomSpecified"> in room {{theRoom}}</span></a>
+      <a href="#" class="item item-divider"><span class="minorstandout">{{thePeriod}}</span>:  <span class="standout">{{theClass}}</span><span ng-show="roomSpecified"> in room {{theRoom}}</span></a>
       <a href="#" class="item item-icon-left">
         <i class="icon ion-clock"></i>
         Started <counttimer date={{periodStartDateTimeString}}> &nbsp;</counttimer> ago (at {{periodStartString}})
