reset all a tags to div

--- a/www/templates/choosebell.html
+++ b/www/templates/choosebell.html
@@ -8,7 +8,7 @@
   <ion-content>
     <ion-list>
         <ion-item ng-repeat="item in items track by $index" ng-click="changeBellSelection($index)">
-          <p>{{item}}</p>
+          <div>{{item}}</div>
         </ion-item>
        </ion-list>
   </ion-content>
