--- a/www/templates/tab-prefs.html
+++ b/www/templates/tab-prefs.html
@@ -5,16 +5,15 @@
           Preferences
         </div>
       <ion-list>
-        <ion-item menu-close href="#/tab/tab-dash">
-          Main View
-        </ion-item>
-        <ion-item menu-close ng-click="showBell()">
+        <ion-item ng-click="showBell()">
           Choose Current BellSchedule
         </ion-item>
-        <ion-item menu-close ng-show="devModeEnabled" ng-click="debug()">
+        <ion-item ng-show="devModeEnabled" ng-click="debug()">
           Toggle Debug
         </ion-item>
-
+        <ion-item ng-click="resetUserData()">
+          Reset Sample Data
+        </ion-item>
       </ion-list>
     </div>
     </ion-content>
