refactored time notifications list and call to updateUI

--- a/www/templates/debug.html
+++ b/www/templates/debug.html
@@ -16,6 +16,10 @@
           <span class="input-label">Enable Debug</span><br>
           <ion-checkbox ng-checked="debugData.debugEnabled" ng-model="debugData.debugEnabled">
         </label>
+        <label class="item item-input">
+          <span class="input-label">Enable Debug Time Speedup Mode</span><br>
+          <ion-checkbox ng-checked="debugData.speedUpMode" ng-model="debugData.speedUpMode">
+        </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Submit</button>
         </label>
