--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,3 +33,11 @@
   color: orange;
   font-weight:  bolder;
 }
+
+.warning1 {
+  background-color: yellow;
+}
+
+.warning2 {
+  background-color: red;
+}
