--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9757,3 +9757,9 @@ a.button {
 .debug {
   color: orange;
   font-weight: bolder; }
+
+.warning1 {
+  background-color: yellow; }
+
+.warning2 {
+  background-color: red; }
