--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="list card schedulecard" ng-show="inClassDiv">
-      <div class="item item-divider"><span class="minorstandout">{{thePeriod}}</span>:  <span class="standout">{{theClass}}</span><span ng-show="roomSpecified"> in room {{theRoom}}</span></div>
+      <div class="item item-divider" ng-class="{warning1: warning1, warning2: warning2}" ><span class="minorstandout">{{thePeriod}}</span>:  <span class="standout">{{theClass}}</span><span ng-show="roomSpecified"> in room {{theRoom}}</span></div>
       <div class="item item-icon-left">
         <i class="icon ion-clock"></i>
         Started <count-timer date={{periodStartDateTimeString}}> &nbsp;</count-timer> ago (at {{periodStartString}})
